--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -14,13 +14,13 @@
 }
 
 $breakpoints: (
-    'laptop': 1200,
-    'tablet': 991,
-    'mobile': 560
+    'laptop': 1200px,
+    'tablet': 991px,
+    'mobile': 560px
 );
 
 @mixin responsivo($breakpoint-name) {
-    @if map-has-key($breakpoints , $breakpoint-name ) {
+    @if map-has-key($breakpoints , $breakpoint-name) {
         @media (max-width: map-get($breakpoints, $breakpoint-name)) {
             @content;
         }
