--- a/css/main.css
+++ b/css/main.css
@@ -77,15 +77,10 @@ h5 {
   font-size: 1.8rem;
   font-weight: 500;
   line-height: 150%;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.2s ease;
 }
 .btn-primary:hover {
   background-color: #4E32B5;
-}
-@media (max-width: 991) {
-  .btn-primary {
-    color: red;
-  }
 }
 
 .form-email {
@@ -97,6 +92,7 @@ h5 {
   display: flex;
   align-items: center;
   width: 100%;
+  max-width: 52.1rem;
   gap: 1.6rem;
 }
 .form-email input {
@@ -113,10 +109,30 @@ h5 {
 .form-email input::placeholder {
   color: #C0C3CC;
 }
+@media (max-width: 991px) {
+  .form-email {
+    margin: 0 auto;
+  }
+  .form-email input {
+    text-align: left;
+  }
+}
+@media (max-width: 560px) {
+  .form-email {
+    justify-content: space-between;
+  }
+  .form-email input {
+    max-width: 15rem;
+  }
+  .form-email .btn-primary {
+    padding: 1.2rem 2rem;
+    font-size: 1.6rem;
+  }
+}
 
 .card-recurso {
   width: 100%;
-  max-width: 22.5rem;
+  max-width: 26.5rem;
 }
 .card-recurso .icon {
   width: 4.8rem;
@@ -142,6 +158,18 @@ h5 {
   font-weight: 400;
   line-height: 150%;
 }
+@media (max-width: 1200px) {
+  .card-recurso {
+    max-width: 100%;
+  }
+  .card-recurso .icon {
+    margin: 0 auto;
+    margin-bottom: 2rem;
+  }
+  .card-recurso .text {
+    text-align: center;
+  }
+}
 
 .review {
   display: flex;
@@ -162,4 +190,282 @@ h5 {
 .review > div span strong {
   color: #787C87;
   font-weight: 400;
+}
+@media (max-width: 991px) {
+  .review {
+    justify-content: center;
+  }
+}
+
+header {
+  position: sticky;
+  top: 0;
+  margin-top: 1.6rem;
+  z-index: 2024;
+}
+header .content-header {
+  border-radius: 100px;
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  background: rgba(255, 255, 255, 0.04);
+  -webkit-backdrop-filter: blur(3.5px);
+          backdrop-filter: blur(3.5px);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.8rem 0.8rem 0.8rem 2.1rem;
+}
+header .content-header .left-content {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+header .content-header .left-content a {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+header .content-header .left-content a span {
+  color: #DFE1E8;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 150%;
+  transition: color 0.2s ease;
+}
+header .content-header .left-content a:hover span {
+  color: #653DF5;
+}
+header .content-header .btn-mobile {
+  display: none;
+}
+@media (max-width: 560px) {
+  header .content-header {
+    padding: 2rem 2.5rem;
+  }
+  header .content-header .logo {
+    max-width: 13.5rem;
+  }
+  header .content-header .left-content {
+    display: none;
+  }
+  header .content-header .btn-mobile {
+    display: block;
+  }
+}
+
+.s-hero {
+  padding-top: 8rem;
+}
+.s-hero .hero-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding-bottom: 9.7rem;
+}
+.s-hero .hero-content .left {
+  flex: 1;
+  max-width: 60rem;
+}
+.s-hero .hero-content .left h1 {
+  font-size: 5.6rem;
+  margin-bottom: 1.6rem;
+}
+.s-hero .hero-content .left h1 span {
+  font-family: "Space Grotesk", sans-serif;
+  color: #653DF5;
+  text-decoration: underline;
+}
+.s-hero .hero-content .left p {
+  max-width: 49.1rem;
+  color: #DFE1E8;
+  font-size: 2.2rem;
+  font-weight: 400;
+  line-height: 150%;
+  margin-bottom: 3.2rem;
+}
+.s-hero .hero-content .left ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 33.9rem;
+  margin: 4.8rem 0;
+}
+.s-hero .hero-content .img-mobile {
+  display: none;
+}
+@media (max-width: 1200px) {
+  .s-hero .hero-content {
+    padding-bottom: 5rem;
+  }
+  .s-hero .hero-content .left {
+    max-width: 55rem;
+  }
+  .s-hero .hero-content .left h1 {
+    font-size: 5rem;
+  }
+  .s-hero .hero-content .left p {
+    font-size: 2rem;
+  }
+  .s-hero .hero-content > img {
+    max-width: 53rem;
+  }
+}
+@media (max-width: 991px) {
+  .s-hero .hero-content {
+    flex-direction: column;
+    gap: 4rem;
+  }
+  .s-hero .hero-content .left {
+    max-width: 100%;
+    text-align: center;
+  }
+  .s-hero .hero-content .left p {
+    margin: 0 auto;
+    margin-bottom: 3rem;
+  }
+  .s-hero .hero-content .left ul {
+    margin: 4rem auto;
+  }
+}
+@media (max-width: 560px) {
+  .s-hero {
+    padding-top: 7.2rem;
+  }
+  .s-hero .hero-content .left h1 {
+    font-size: 4rem;
+  }
+  .s-hero .hero-content .left h1 span {
+    display: block;
+  }
+  .s-hero .hero-content .left p {
+    font-size: 1.6rem;
+  }
+  .s-hero .hero-content > img {
+    display: none;
+    max-width: 100%;
+  }
+  .s-hero .hero-content > img.img-mobile {
+    display: block;
+  }
+}
+
+.s-recursos {
+  padding-top: 11.1rem;
+}
+.s-recursos .top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 8rem;
+}
+.s-recursos .top h3 {
+  max-width: 69.5rem;
+}
+.s-recursos .top p {
+  color: #DFE1E8;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 150%;
+}
+.s-recursos .all {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding-bottom: 11.1rem;
+}
+@media (max-width: 1200px) {
+  .s-recursos {
+    padding-top: 5rem;
+  }
+  .s-recursos .all {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3rem;
+  }
+}
+@media (max-width: 991px) {
+  .s-recursos .top {
+    flex-direction: column;
+    gap: 3rem;
+    margin-bottom: 5rem;
+  }
+  .s-recursos .top h3 {
+    text-align: center;
+  }
+  .s-recursos .top p {
+    text-align: center;
+  }
+  .s-recursos .all {
+    padding-bottom: 5rem;
+  }
+}
+@media (max-width: 560px) {
+  .s-recursos {
+    padding-top: 4rem;
+  }
+  .s-recursos .top {
+    margin-bottom: 3rem;
+  }
+  .s-recursos .top h3 {
+    font-size: 2.8rem;
+  }
+  .s-recursos .all {
+    grid-template-columns: 1fr;
+    gap: 6.4rem;
+  }
+}
+
+.s-marketing {
+  padding-top: 9.6rem;
+  padding-bottom: 12.6rem;
+}
+.s-marketing .box {
+  width: 100%;
+  height: 46rem;
+  background: url(../img/bg-box.svg) no-repeat center center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 1rem;
+}
+.s-marketing .box h2 {
+  text-align: center;
+  font-size: 5.6rem;
+  max-width: 78.6rem;
+  margin-bottom: 0.8rem;
+}
+.s-marketing .box p {
+  max-width: 50.1rem;
+  color: #DFE1E8;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 150%;
+  margin-bottom: 3.2rem;
+}
+@media (max-width: 991px) {
+  .s-marketing .box {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+@media (max-width: 560px) {
+  .s-marketing {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+  .s-marketing .box {
+    height: auto;
+    background-size: cover;
+    padding: 4rem 1.5rem;
+  }
+  .s-marketing .box h2 {
+    font-size: 2.9rem;
+  }
+  .s-marketing .box p {
+    font-size: 1.8rem;
+  }
 }/*# sourceMappingURL=main.css.map */
